[gd_scene load_steps=3 format=3 uid="uid://8fxancoecrt1"]

[ext_resource type="Script" path="res://Scenes/HUD.gd" id="1_j5grr"]
[ext_resource type="FontFile" uid="uid://nfb11wfg2gy0" path="res://2DAssets/raster.ttf" id="1_qt1ww"]

[node name="HUD" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.998
offset_bottom = 1.29596
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j5grr")

[node name="Money" type="Label" parent="."]
layout_mode = 0
offset_right = 114.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0, 0.811765, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_qt1ww")
theme_override_font_sizes/font_size = 32
text = "$: 5000"

[node name="Add" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 33.0
offset_right = 99.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(0, 0.811765, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_qt1ww")
theme_override_font_sizes/font_size = 32
text = "+ 500"

[node name="Subtract" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 33.0
offset_right = 95.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(0.811765, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_qt1ww")
theme_override_font_sizes/font_size = 32
text = "- 500"

[node name="Available Contracts" type="MenuButton" parent="."]
layout_mode = 1
offset_top = 79.0
offset_right = 279.0
offset_bottom = 129.0
theme_override_colors/font_color = Color(0, 0.811765, 0, 1)
theme_override_fonts/font = ExtResource("1_qt1ww")
theme_override_font_sizes/font_size = 32
text = "Available Contracts"

[node name="Fulfilled Contracts" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -208.0
offset_bottom = 43.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0.811765, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_qt1ww")
theme_override_font_sizes/font_size = 32
text = "Contracts: 0/7"
horizontal_alignment = 2

[node name="Time" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -43.0
offset_right = 208.0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0.811765, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_qt1ww")
theme_override_font_sizes/font_size = 32
text = "00:00:00"
horizontal_alignment = 1

[node name="Day" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -79.0
offset_top = 44.0
offset_bottom = 86.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0.811765, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_qt1ww")
theme_override_font_sizes/font_size = 32
text = "Day: 1"
horizontal_alignment = 2

[node name="Date" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -159.0
offset_top = 91.0
offset_bottom = 133.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0.811765, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_qt1ww")
theme_override_font_sizes/font_size = 32
text = "7/19/2024"
horizontal_alignment = 2

[node name="Pause" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -98.5
offset_top = -42.0
offset_right = -56.5
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0.811765, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 24
toggle_mode = true
text = "❚❚"

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.5
offset_top = -42.0
offset_right = 17.5
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0.811765, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 24
toggle_mode = true
text = "▶"

[node name="FFWD" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 50.5
offset_top = -42.0
offset_right = 113.5
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0.811765, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.811765, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.811765, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0.811765, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0.811765, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0.811765, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0.811765, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 24
toggle_mode = true
text = "▶▶"

[node name="Pass Day" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -132.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0.811765, 0, 1)
theme_override_fonts/font = ExtResource("1_qt1ww")
theme_override_font_sizes/font_size = 32
action_mode = 0
text = "Pass Day"

[node name="Rotate Left" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 80.0
offset_right = 53.0
offset_bottom = 217.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.589096, 0.589096, 0.589096, 1)
theme_override_fonts/font = ExtResource("1_qt1ww")
theme_override_font_sizes/font_size = 100
text = "<"

[node name="Rotate Right" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -71.0
offset_top = 80.0
offset_bottom = 217.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.589096, 0.589096, 0.589096, 1)
theme_override_fonts/font = ExtResource("1_qt1ww")
theme_override_font_sizes/font_size = 100
text = " >"
alignment = 2

[node name="GameOver" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.5
offset_top = -11.5
offset_right = 96.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.811765, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_qt1ww")
theme_override_font_sizes/font_size = 64
text = "Employment Terminated"

[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="FFWD" to="." method="_on_ffwd_pressed"]
